--- a/lulu.html
+++ b/lulu.html
@@ -10,10 +10,9 @@
         p {
             padding: 25%;
             display: block;
-            font-size: 64px;
+            font-size: 2em;
             font-family: arial;
             margin: auto;
-            width: 500px;
             text-align: center;
 
         }
