--- a/lulu.html
+++ b/lulu.html
@@ -26,7 +26,7 @@
 
 <script>
     // Set the date we're counting down to
-    var countDownDate = new Date("12/11/2022").getTime();
+    var countDownDate = new Date("12/11/2022 16:00").getTime();
 
     // Update the count down every 1 second
     var x = setInterval(function () {
